--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,13 @@ on:
   push:
 jobs:
   build:
-    name: run python
+    name: Set up environment
     runs-on: ubuntu-lastest
     steps: 
     - uses: actions/chechout@v2
-    - name: Run python
+    - name: Install dependencies
       run: |
-         python3 test.py
+         pip3 install --upgrade pip
+    -name: Run my python
+     run:
+       python3 test.py
