--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/chechout@v2
     - name: Install dependencies
       run: |
-         pip3 install --upgrade pip
+        pip3 install --upgrade pip
     -name: Run my python
-     run:
-       python3 test.py
+      run: |
+        python3 test.py
