--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,9 @@ on:
 jobs:
   build:
     name: Set up environment
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps: 
     - uses: actions/chechout@v2
-    - name: Install dependencies
-      run: |
-        pip3 install --upgrade pip
     -name: Run my python
       run: |
         python3 test.py
