--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     name: Set up environment
     runs-on: ubuntu-latest
     steps: 
-    - uses: actions/chechout@v2
+    - uses: actions/checkout@v2
     - name: Run my python
       run: |
         python3 test.py
